# opengl-automaskobj

./: .gitignore  CMakeLists.txt  OpenGLAutoMaskObj.pro  OpenGLAutoMaskObj_zh_CN.ts  README.md
include/: DataRebuild.h
scripts/: COCODatasetLoader.py  ShapesToCOCO.py  shapes_to_coco.py
src/: DataRebuild.cpp  OpenGLAutoMaskObj.pro
src/OpenGLAutoMaskObj/: OpenGLAutoMaskObj.pro  OpenGLAutoMaskObj_zh_CN.ts  mainwindow.cpp  mainwindow.h
src/OpenGLAutoMaskObj/OpenGL_Auto_Obj_Masker/: EasyIntersection2D.cpp  EasyIntersection2D.h  EasyMask2D.cpp  EasyMask2D.h  EasyMesh2D.cpp  EasyMesh2D.h  EasyPolygon.cpp  EasyPolygon.h  EasyPolygon2D.cpp  EasyPolygon2D.h  Intersection2DManager.cpp  Intersection2DManager.h  OpenGL_Auto_Obj_Masker.cpp  OpenGL_Auto_Obj_Masker.h  PointMapWidget.cpp  PointMapWidget.h  easymesh.cpp  easymesh.h
src/OpenGLAutoMaskObj/include/: DataRebuild.h
src/OpenGLAutoMaskObj/src/: DataRebuild.cpp
src/Q3D/: Q3D.pro  q3d.qrc  q3d_global.h
src/Q3D/Core/: Q3DScene.cpp  Q3DScene.h  QICPAlign.cpp  QICPAlign.h  QMaterial.cpp  QMaterial.h  QMathUtil.cpp  QMathUtil.h  QMatrix2Eular.cpp  QMatrix2Eular.h  QMesh3D.cpp  QMesh3D.h  QMeshGroup.cpp  QMeshGroup.h  QMeshParser.cpp  QMeshParser.h
src/Q3D/Evaluator/: QShaderEvaluator.cpp  QShaderEvaluator.h
src/Q3D/Finder/: PointMapModelFinder.cpp  PointMapModelFinder.h  QFinderConfig.cpp  QFinderConfig.h  QModelFinder.cpp  QModelFinder.h  QPointMapModelFinder.cpp  QPointMapModelFinder.h
src/Q3D/Meshes/: QAxesMesh.cpp  QAxesMesh.h  QCubeMesh.cpp  QCubeMesh.h  QPointMapMesh.cpp  QPointMapMesh.h  QPrimitiveMesh.cpp  (+3 more)
(+26 files in other folders)
